--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faraday Hall</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/homepage-styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com"> 
+	<link href="fonts/Manrope-VariableFont_wght.ttf" rel="stylesheet">
+	<meta name="viewport" content="width=device-width" />
+	<title>Faraday Hall</title>
+	<!-- <meta name="description" content="Welcome to the Faraday Hall!"> -->
+	<meta name="robots" content="index, follow" />	
+	<link rel="icon" type="image/png" href="images/faraday-logo.png"/>
+
 </head>
 <body>
-    <p>Coming soon! 🦊</p>
+	<main>
+		<script type="text/javascript" src="scripts/navbar.js"></script>
+
+		<section class="landing-introduction">
+			<div class="introduction-image-container">
+				<img src="images/header.jpg" class="header-image image">
+			</div>
+			<div class="introduction-text">
+				<div>
+					<h2 class="welcome-message">Welcome to Faraday Hall</h2>
+					<p class="secondary">Since 1962</p>
+					<p>HALL OF THE YEAR 2019, runner up ‘17, ‘18 & ‘21!</p>
+					<p>11 TIME IMS CHAMPIONS 🏆</p>
+				</div>
+				
+			</div>
+		</section>
+
+		<section>
+			<h2>Here are some photos from our recent Casino Night</h2>
+			<div class="casino-images-container">
+				<div class="introduction-image-container">
+					<img src="images/events/casino-night-2023/casino-night-1.jpg" class="image casino-image">
+				</div>
+				<div class="introduction-image-container">
+					<img src="images/events/casino-night-2023/casino-night-2.jpg" class="image casino-image">
+				</div>
+				<div class="introduction-image-container">
+					<img src="images/events/casino-night-2023/casino-night-3.jpg" class="image casino-image">
+				</div>
+			</div>
+
+
+
+
+
+
+		</section>
+	</main>
+
+	<script type="text/javascript" src="scripts/footer.js"></script>
+	<script type="text/javascript" src="scripts/script.js"></script>
+	<script src="https://kit.fontawesome.com/527e74da80.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
