--- a/sport.html
+++ b/sport.html
@@ -82,6 +82,15 @@
                 <div class="sport-image-div">
                     <img src="images/sport/sport11.jpeg" alt="" class="sport-image">
                 </div>
+                <div class="sport-image-div">
+                    <img src="images/sport/sport12.jpeg" alt="" class="sport-image">
+                </div>
+                <div class="sport-image-div">
+                    <img src="images/sport/sport13.jpeg" alt="" class="sport-image">
+                </div>
+                <div class="sport-image-div">
+                    <img src="images/sport/sport14.jpeg" alt="" class="sport-image">
+                </div>
 
 
             </div>
