IMS Rugby Final Photos

--- a/index.html
+++ b/index.html
@@ -33,16 +33,20 @@
 		</section>
 
 		<section>
-			<h2>Here are some photos from our recent Casino Night</h2>
-			<div class="casino-images-container">
-				<div class="introduction-image-container">
-					<img src="images/events/casino-night-2023/casino-night-1.jpg" class="image casino-image">
+			<h2>IMS Rugby Final VS Telford 🧡🏆🏉</h2>
+
+			<div class="homepage-grid">
+				<div class="homepage-photo-container">
+					<img src="images/sport/rugby/ims-final-2023/image-1.jpg" class="homepage-image">
 				</div>
-				<div class="introduction-image-container">
-					<img src="images/events/casino-night-2023/casino-night-2.jpg" class="image casino-image">
+				<div class="homepage-photo-container">
+					<img src="images/sport/rugby/ims-final-2023/image-2.jpg" class="homepage-image">
 				</div>
-				<div class="introduction-image-container">
-					<img src="images/events/casino-night-2023/casino-night-3.jpg" class="image casino-image">
+				<div class="homepage-photo-container">
+					<img src="images/sport/rugby/ims-final-2023/image-3.jpg" class="homepage-image">
+				</div>
+				<div class="homepage-photo-container">
+					<img src="images/sport/rugby/ims-final-2023/image-4.jpg" class="homepage-image">
 				</div>
 			</div>
 
