Index.html description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="fonts/Manrope-VariableFont_wght.ttf" rel="stylesheet">
 	<meta name="viewport" content="width=device-width" />
 	<title>Faraday Hall</title>
-	<!-- <meta name="description" content="Welcome to the Faraday Hall!"> -->
+	<meta name="description" content="Welcome to Faraday Hall! Loughborough Hall of the Year 2019 and 11 time IMS Champions!">
 	<meta name="robots" content="index, follow" />	
 	<link rel="icon" type="image/png" href="images/faraday-logo.png"/>
 
