Updated upcoming events

--- a/index.html
+++ b/index.html
@@ -33,25 +33,20 @@
 		</section>
 
 		<section>
-			<h2>IMS Rugby Final VS Telford 🧡🏆🏉</h2>
+			<h2>Upcoming events 🧡 📆</h2>
+			<h3>🏏 CRICKET VS ELVYN 🏏</h3>
+			<p>The sun is out which means that it’s the season of bats and balls again! Our first cricket game of the season starts this afternoon at 5:30 against Elvyn! 🧡</p>
+			<p>Get yourself down to the hollywell pitches with a beer in hand to enjoy a lovely afternoon of village style cricket 🍻</p>
+			<p>📍Hollywell 1&2</p>
+			<p>⏰ Wednesday 3rd May 5:30-7:30 pm </p>
+			<p>Be there or be ▪️</p>
 
-			<div class="homepage-grid">
-				<div class="homepage-photo-container">
-					<img src="images/sport/rugby/ims-final-2023/image-1.jpg" class="homepage-image">
-				</div>
-				<div class="homepage-photo-container">
-					<img src="images/sport/rugby/ims-final-2023/image-2.jpg" class="homepage-image">
-				</div>
-				<div class="homepage-photo-container">
-					<img src="images/sport/rugby/ims-final-2023/image-3.jpg" class="homepage-image">
-				</div>
-				<div class="homepage-photo-container">
-					<img src="images/sport/rugby/ims-final-2023/image-4.jpg" class="homepage-image">
-				</div>
-			</div>
-
-
-
+			<h3>🏃‍♀️ ATHLETICS ODE 🏃‍♂️</h3>
+			<p>The Athletics ODE is coming up - the biggest ODE of the year!</p>
+			<p>Get down to the track on Sunday 7th May to watch the Faradonians run jump and throw their way to victory! 🧡</p>
+			<p>📍 Paula Radcliffe Stadium</p>
+			<p>⏰ Sunday 7th May</p>
+			<p>Be there or be ▪️</p>
 
 
 
