Updates to main page

--- a/index.html
+++ b/index.html
@@ -39,14 +39,24 @@
 			<p>Get yourself down to the hollywell pitches with a beer in hand to enjoy a lovely afternoon of village style cricket 🍻</p>
 			<p>📍Hollywell 1&2</p>
 			<p>⏰ Wednesday 3rd May 5:30-7:30 pm </p>
-			<p>Be there or be ▪️</p>
 
 			<h3>🏃‍♀️ ATHLETICS ODE 🏃‍♂️</h3>
-			<p>The Athletics ODE is coming up - the biggest ODE of the year!</p>
-			<p>Get down to the track on Sunday 7th May to watch the Faradonians run jump and throw their way to victory! 🧡</p>
+			<p>Ladies and Gentlemen, this is the big one! This is the one that shows that Faraday is the best hall  in Loughborough, this is the one you’ll be telling your grandchildren about in years to come… </p>
+			<p>The ODE will be taking place on the 7th May so even if you don’t compete we want you all there in full force and full body orange face paint if you’re feeling fruity 🦊🏅😈</p>
 			<p>📍 Paula Radcliffe Stadium</p>
 			<p>⏰ Sunday 7th May</p>
-			<p>Be there or be ▪️</p>
+
+			<h3>🌞 FARADAY SUMMER BALL 🪩</h3>
+			<p>The Faraday Summer Ball is getting close! 💃🕺</p>
+			<p>Make sure to collect your wristband at the dining hall on Friday, Monday or Tuesday 🎟️</p>
+			<p>📍 Winstanley House, Leicester</p>
+			<p>⏰ Wednesday 10th May</p>
+
+			<h3>🍷 Grace Dieu high tables 🍷</h3>
+			<p>The Grace Dieu high tables will take place on 11th May and is without a doubt the most important event in Faraday’s calendar👀👀It is a memorial of 4 students who died and is also an event where the recipient of the Grace Dieu award is revealed!!!🎉🎉</p>
+			<p>📍 Faraday Dining Hall</p>
+			<p>⏰ Thursday 11th May</p>
+
 
 
 
