--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
 
 		<section>
 			<h2>Upcoming events 🧡 📆</h2>
+
+			<h3>⚾️ ROUNDERS ⚾️</h3>
+			<p>Ladies and gentlemen, boys and girls! The rounders season has begun and it kicks off this afternoon against the Royce scum! The girls will be playing 3 different games:</p>
+			<p>⏰</p>
+			<p>16:00 - Royce</p>
+			<p>16:40 - Falk Egg</p>
+			<p>17:20 - Butler Court</p>
+			<p>📍EHB </p>
+			<p>Please get to support the girls and have a very enjoyable afternoon in the sun! ☀️</p>
+
 			<h3>🏏 CRICKET VS ELVYN 🏏</h3>
 			<p>The sun is out which means that it’s the season of bats and balls again! Our first cricket game of the season starts this afternoon at 5:30 against Elvyn! 🧡</p>
 			<p>Get yourself down to the hollywell pitches with a beer in hand to enjoy a lovely afternoon of village style cricket 🍻</p>
