--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			<h3>⚾️ ROUNDERS ⚾️</h3>
 			<p>Ladies and gentlemen, boys and girls! The rounders season has begun and it kicks off this afternoon against the Royce scum! The girls will be playing 3 different games:</p>
-			<p>⏰</p>
+			<p>⏰ Wednesday 3rd May</p>
 			<p>16:00 - Royce</p>
 			<p>16:40 - Falk Egg</p>
 			<p>17:20 - Butler Court</p>
