--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
 
 		<section>
 			<h2>Upcoming events 🧡 📆</h2>
-
-			<h3>🏃‍♀️ ATHLETICS ODE 🏃‍♂️</h3>
-			<p>Ladies and Gentlemen, this is the big one! This is the one that shows that Faraday is the best hall  in Loughborough, this is the one you’ll be telling your grandchildren about in years to come… </p>
-			<p>The ODE will be taking place on the 7th May so even if you don’t compete we want you all there in full force and full body orange face paint if you’re feeling fruity 🦊🏅😈</p>
-			<p>📍 Paula Radcliffe Stadium</p>
-			<p>⏰ Sunday 7th May</p>
-
+			
 			<h3>🌞 FARADAY SUMMER BALL 🪩</h3>
 			<p>The Faraday Summer Ball is getting close! 💃🕺</p>
 			<p>Make sure to collect your wristband at the dining hall on Friday, Monday or Tuesday 🎟️</p>
@@ -51,6 +45,11 @@
 			<p>The Grace Dieu high tables will take place on 11th May and is without a doubt the most important event in Faraday’s calendar👀👀It is a memorial of 4 students who died and is also an event where the recipient of the Grace Dieu award is revealed!!!🎉🎉</p>
 			<p>📍 Faraday Dining Hall</p>
 			<p>⏰ Thursday 11th May</p>
+
+			<h3>🏐 DODGEBALL ODE 🏐</h3>
+			<p>This Sunday (14th May) there will be a dodgeball ODE in the SDW centre!</p>
+			<p>📍SDW</p>
+			<p>⏰ Sunday 14th May 12-16:00 </p>
 
 
 
