--- a/index.html
+++ b/index.html
@@ -33,23 +33,14 @@
 		</section>
 
 		<section>
-			<h2>Upcoming events 🧡 📆</h2>
+			<!-- <h2>Upcoming events 🧡 📆</h2>
 			
-			<h3>🌞 FARADAY SUMMER BALL 🪩</h3>
-			<p>The Faraday Summer Ball is getting close! 💃🕺</p>
-			<p>Make sure to collect your wristband at the dining hall on Friday, Monday or Tuesday 🎟️</p>
-			<p>📍 Winstanley House, Leicester</p>
-			<p>⏰ Wednesday 10th May</p>
+			<h3></h3>
+			<p>T</p>
+			<p></p>
+			<p>📍 </p>
+			<p>⏰ </p> -->
 
-			<h3>🍷 Grace Dieu high tables 🍷</h3>
-			<p>The Grace Dieu high tables will take place on 11th May and is without a doubt the most important event in Faraday’s calendar👀👀It is a memorial of 4 students who died and is also an event where the recipient of the Grace Dieu award is revealed!!!🎉🎉</p>
-			<p>📍 Faraday Dining Hall</p>
-			<p>⏰ Thursday 11th May</p>
-
-			<h3>🏐 DODGEBALL ODE 🏐</h3>
-			<p>This Sunday (14th May) there will be a dodgeball ODE in the SDW centre!</p>
-			<p>📍SDW</p>
-			<p>⏰ Sunday 14th May 12-16:00 </p>
 
 
 
