--- a/committee.html
+++ b/committee.html
@@ -230,20 +230,20 @@
 
                 <div class="member-container">
                     <div>
-                        <img class="committee-photo" src="images/committee/freya.jpg"></img>
+                        <img class="committee-photo" src="images/committee/angus.jpg"></img>
                     </div>
                     <div class="text-container">
-                        <p class="member-name">Freya Mason</p>
+                        <p class="member-name">Angus Betts</p>
                         <p class="member-role">Finalist</p>
                     </div>
                 </div>
 
                 <div class="member-container">
                     <div>
-                        <img class="committee-photo" src="images/committee/aaron.jpg"></img>
+                        <img class="committee-photo" src="images/committee/tom.jpg"></img>
                     </div>
                     <div class="text-container">
-                        <p class="member-name">Aaron Clark</p>
+                        <p class="member-name">Tom Brown</p>
                         <p class="member-role">Finalist</p>
                     </div>
                 </div>
